retrieveUnpackaged/objects/Unit__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_No_Longer_in_Use__c</fullName>
        <label>Reason No Longer in Use</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Created_By__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Terminated_By1__c</fullName>
        <label>Unit Terminated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_date</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be after the effective date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_No_Longer_in_Use</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK( End_Date__c )),
ISBLANK( Reason_No_Longer_in_Use__c ))</errorConditionFormula>
        <errorDisplayField>Reason_No_Longer_in_Use__c</errorDisplayField>
        <errorMessage>required if &quot;end date&quot; is entered</errorMessage>
    </validationRules>
</CustomObject>